--- a/GikBrains/catalog/catalog.html
+++ b/GikBrains/catalog/catalog.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <ul class="menu">
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="/catalog/catalog.html">Каталог</a></li>
-            <li><a href="../contacts.html">Контакты</a></li>
+            <li><a href="../GikBrains/index.html">Главная</a></li>
+            <li><a href="/GikBrains/catalog/catalog.html">Каталог</a></li>
+            <li><a href="/Co">Контакты</a></li>
         </ul>
     </header>
     <hr>
@@ -31,6 +31,4 @@
         © Все права извращены
     </footer>
 
-</body>
-
-</html>
+</body></html>
