Изменил первый товар на велосипед из каталога Кирюхи с авито

--- a/GikBrains/catalog/tovar1.html
+++ b/GikBrains/catalog/tovar1.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>ЗАЛУПА</h1>
+    <h1>Тайваньский гоночный эндуранс Giant на 185-190см</h1>
     <header>
         <ul class="menu">
             <li><a href="../index.html">Главная</a></li>
@@ -16,22 +16,47 @@
         </ul>
     </header>
     <hr>
-    <a href="/img/zalupa.jpg" title="Нажми!!!" target="_blank"><img src="/img/zalupa.jpg" border="0" alt="Нажми"></a>
-    <!--<p> Нуууу... заллупа, это Моя гордость, всем Залупам залупа! Наливная, да&nbsp;лиловая, как слива садовая</p>  -->
-    <h3>Подробное описание залупы</h3>
-    <p>О&nbsp;залупе своей скажу так, что ее&nbsp;описывать, ее&nbsp;нужно облизывать! <br>
-        Всех подробностей и&nbsp;не&nbsp;расскажеш тут, нужно её&nbsp;просто увидеть! </p>
+    <a href="/GikBrains/img/tovar1.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar1.jpg" border="0" alt="Нажми"></a>
+    <h3>Подробное описание товара</h3>
+    <p>❤️ Ищет хозяина.
+        🔎 Модель: Giant TCR Advanced Pro 1 Disc (2019г.)🇹🇼;
+        👫 На рост 185-190см± см;
+        📏 Размер рамы L: ЕТТ 58 см;
+        🔧 Состояние:
+        — рама: ⭐⭐⭐⭐⭐
+        — навеска/колёса: ⭐⭐⭐⭐⭐
+        ⚖️ Вес: 8 кг🔥
+        ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife.
+        ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife.
+        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в веломастерской Velody на обслуживание купленного велосипеда;
+        2️⃣ В подарок от магазина оригинальной🇮🇹 велоформы и велоодежды скидка 5% на всю продукцию;
+        3️⃣ Скидка 5% на весь ассортимент в магазине SportResort💣
+    </p>
     <!-- вот такие дела дружочки -->
-    <h3>Характеристик залупы</h3>
+    <h3>⚙️ Технические детали:</h3>
     <ol>
         <li>Размер у&nbsp;нее хороший!</li>
-        <li>Вкус у&nbsp;нее отличный</li>
-        <li>Вида она достойного</li>
-        <li>В&nbsp;общем целом&nbsp;&mdash; всем залупам Залупа!</li>
-    </o>
-    <hr>
-    <footer>
-        <p>все права извращены &copy;&nbsp;2017</p>
-    </footer>
+        <li>рама: Advanced Pro-Grade Composite - карбон/монокок</li>
+        <li>вилка: Advanced-Grade Composite - карбон</li>
+        <li>вынос: Giant Contact SL - алюм</li>
+        <li>руль: Giant Contact SL - алюм</li>
+        <li>седло: Giant Contact SL</li>
+        <li>подседел: Giant Variant - карбон</li>
+        <li>манетки: Shimano Ultegra R8000, 2x11ск</li>
+        <li>переключатели: Shimano Ultegra R8000</li>
+        <li>тормоза: Shimano Ultegra R8000, 160/160мм, гидравлика</li>
+        <li>система: Shimano Ultegra 8000, 52/36T</li>
+        <li>кассета: Shimano Ultegra, 11-30T</li>
+        <li> колёса: Giant SLR 1, 42мм - карбон</li>
+        <li>покрышки: Giant Gavia AC1, 700x25c</li>
 
-</body></html>
+        <li>В&nbsp;общем целом&nbsp;&mdash; всем залупам Залупа!</li>
+        </o>
+        <hr>
+        <footer>
+            <p>все права извращены &copy;&nbsp;2017</p>
+        </footer>
+
+</body>
+
+</html>
