--- a/GikBrains/catalog/tovar1.html
+++ b/GikBrains/catalog/tovar1.html
@@ -18,24 +18,36 @@
     <hr>
     <a href="/GikBrains/img/tovar1.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar1.jpg" border="0" alt="Нажми"></a>
     <h3>Подробное описание товара</h3>
-    <p>❤️ Ищет хозяина.
+    <p>
+        ❤️ Ищет хозяина.
         🔎 Модель: Giant TCR Advanced Pro 1 Disc (2019г.)🇹🇼;
+        <hr>
         👫 На рост 185-190см± см;
+        <hr>
         📏 Размер рамы L: ЕТТ 58 см;
+        <hr>
         🔧 Состояние:
+        <hr>
         — рама: ⭐⭐⭐⭐⭐
+        <hr>
         — навеска/колёса: ⭐⭐⭐⭐⭐
+        <hr>
         ⚖️ Вес: 8 кг🔥
+        <hr>
         ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife.
+        <hr>
         ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife.
+        <hr>
         1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в веломастерской Velody на обслуживание купленного велосипеда;
+        <hr>
         2️⃣ В подарок от магазина оригинальной🇮🇹 велоформы и велоодежды скидка 5% на всю продукцию;
+        <hr>
         3️⃣ Скидка 5% на весь ассортимент в магазине SportResort💣
+        <hr>
     </p>
     <!-- вот такие дела дружочки -->
     <h3>⚙️ Технические детали:</h3>
     <ol>
-        <li>Размер у&nbsp;нее хороший!</li>
         <li>рама: Advanced Pro-Grade Composite - карбон/монокок</li>
         <li>вилка: Advanced-Grade Composite - карбон</li>
         <li>вынос: Giant Contact SL - алюм</li>
@@ -49,13 +61,11 @@
         <li>кассета: Shimano Ultegra, 11-30T</li>
         <li> колёса: Giant SLR 1, 42мм - карбон</li>
         <li>покрышки: Giant Gavia AC1, 700x25c</li>
-
-        <li>В&nbsp;общем целом&nbsp;&mdash; всем залупам Залупа!</li>
-        </o>
-        <hr>
-        <footer>
-            <p>все права извращены &copy;&nbsp;2017</p>
-        </footer>
+    </ol>
+    <hr>
+    <footer>
+        <p>все права защищены &copy;&nbsp;2020</p>
+    </footer>
 
 </body>
 
