--- a/GikBrains/catalog/tovar2.html
+++ b/GikBrains/catalog/tovar2.html
@@ -3,34 +3,73 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Хуй</title>
+    <title>Guerciotti Eclipse TT</title>
 </head>
 
 <body>
+    <h1>Guerciotti Eclipse TT (2016г.)</h1>
     <header>
-        <header>
-            <ul class="menu">
-                <li><a href="../index.html">Главная</a></li>
-                <li><a href="../catalog/catalog.html">Каталог</a></li>
-                <li><a href="../contacts.html">Контакты</a></li>
-            </ul>
-        </header>
-        <hr>
-        <a href="/img/huy.jpg" title="Нажми!!!" target="_blank"><img src="/img/huy.jpg" border="0" alt="Нажми" width="500" height="500"></a>
+        <ul class="menu">
+            <li><a href="../index.html">Главная</a></li>
+            <li><a href="../catalog/catalog.html">Каталог</a></li>
+            <li><a href="../contacts.html">Контакты</a></li>
+        </ul>
     </header>
-    <main>
-        <h1>Хуй</h1>
-        <h3>Описание Хуя</h3>
-        <p>Между ног есть штука - это хуй. О нем и пойдет речь. <br>
-            Хуй значит. <br>
-            Из него ссут, и им по лбу бью, ну в общем то и всё тут. <br>
-            Ясно? </p>
-        <h3>"Характеристики ХУЯ"</h3>
-        <p>Ну хуй у меня нормальный такой, ну не то что бы маленький, но и не огромный такой. НО-Р-МАЛЬ-НЫЙ, понятно?</p>
-        <p>18см, на вкус солленый, цвет - как сарделька, волосы вьющиеся</p>
+    <hr>
+    <a href="/GikBrains/img/tovar2.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar2.jpg" border="0" alt="Нажми"></a>
+    <h3>Подробное описание товара</h3>
+    <p>
+        ❤️ Ищет хозяина. Ожидает в Москве⚠️
         <hr>
-    </main>
+        🔎 Модель: Guerciotti Eclipse TT (2016г.)🇮🇹;
+        <hr>
+        👫 На рост 186-192± см;
+        <hr>
+        📏 Размер рамы L/XL - ЕТТ 56,5 см;
+        <hr>
+        🔧 Состояние:
+        <hr>
+        — рама: ⭐⭐⭐⭐
+        <hr>
+        — навеска: ⭐⭐⭐⭐
+        <hr>
+        — колёса: ⭐⭐⭐⭐⭐
+        <hr>
+        ⚖️ Вес 8,6 кг.
+        <hr>
+        ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife.
+        <hr>
+        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в веломастерской Velody на обслуживание купленного велосипеда;
+        <hr>
+        2️⃣ В подарок от магазина оригинальной🇮🇹 велоформы и велоодежды скидка 5% на всю продукцию;
+        <hr>
+        3️⃣ Скидка 10% на профессиональный бодифит от студии VeloSportLab🔝
+        <hr>
+        4️⃣ Скидка 10% на весь ассортимент в магазине SportResort💣
+        <hr>
+    </p>
+    <h3>⚙️ Технические детали:</h3>
+    <ol>
+        <li> рама: Guerciotti HM Monocoque - карбон/монокок</li>
+        <li>вилка: Guerciotti HM aero - карбон</li>
+        <li>вынос: Eclipse TT - алюм</li>
+        <li>руль: Dеdа Кrоnоs - карбон</li>
+        <li>лежаки: Deda Parabolica - алюм</li>
+        <li>седло: Sеllе Itаliа SLR ТТ Теаm Еditiоn</li>
+        <li>подседел: TEC for Eclipse TT - карбон</li>
+        <li>манетки: Shimаnо Durа-Асе 9000, 2x11ск</li>
+        <li>переключатели: Shimаnо Durа-Асе 9000</li>
+        <li>тормоза: TRP Aero</li>
+        <li>система: Shimano 105, 50/34T</li>
+        <li>кассета: Shimano Ultegra, 11-28, 11ск</li>
+        <li>колёса: Mavic Cosmic Al</li>
+        <li>покрышки: Continental Grand Prix 4 Season, 700x25c</li>
+    </ol>
+    <hr>
     <footer>
-        <p>все права извращены &copy;&nbsp;2017</p>
+        <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
-</body></html>
+
+</body>
+
+</html>
