--- a/GikBrains/catalog/tovar3.html
+++ b/GikBrains/catalog/tovar3.html
@@ -3,34 +3,73 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Яйца</title>
+    <title>Bottecchia Tourmalet T1</title>
 </head>
 
 <body>
+    <h1>Bottecchia Tourmalet T1 (2016г.)</h1>
     <header>
-        <header>
-            <ul class="menu">
-                <li><a href="../index.html">Главная</a></li>
-                <li><a href="../catalog/catalog.html">Каталог</a></li>
-                <li><a href="../contacts.html">Контакты</a></li>
-            </ul>
-        </header>
-        <hr>
-        <a href="/img/iyayza.jpg" title="Нажми!!!" target="_blank"><img src="/img/iyayza.jpg" border="0" alt="Нажми" width="500" height="500"></a>
+        <ul class="menu">
+            <li><a href="../index.html">Главная</a></li>
+            <li><a href="../catalog/catalog.html">Каталог</a></li>
+            <li><a href="../contacts.html">Контакты</a></li>
+        </ul>
     </header>
-    <main>
-        <h1>Яйца</h1>
-        <h3>Описание яиц</h3>
-        <p>Ну яйца, всем известно, ЧТО! Яйца это ведь, ну... <b>ЯЙЦА!!!</b></p>
-        <h3>Характеристики Яйцев</h3>
-        <p>Яйца мои, не большие, но и не малые <br>
-            Кудрявенькие, но бритые бывают <br>
-            любят они когда их Сёпа языком так, ну Лизь-лизь, ага прям до мурашек</p>
+    <hr>
+    <a href="/GikBrains/img/tovar2.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar2.jpg" border="0" alt="Нажми"></a>
+    <h3>Подробное описание товара</h3>
+    <p>
+        ❤️ Ищет хозяина. Ожидает в Москве ⚠️
         <hr>
-    </main>
+        🔎 Модель: Bottecchia Tourmalet T1 (2016г.)🇮🇹;
+        <hr>
+        👫 На рост 185-192± см;
+        <hr>
+        📏 Размер рамы L/XL(54) - ЕТТ 57 см;
+        <hr>
+        🔧 Состояние:
+        <hr>
+        — рама: ⭐⭐⭐⭐
+        <hr>
+        — навеска: ⭐⭐⭐⭐
+        <hr>
+        — колёса: ⭐⭐⭐⭐⭐
+        <hr>
+        ⚖️ Вес: 8 кг
+        <hr>
+        ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife
+        <hr>
+        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в веломастерской Velody на обслуживание купленного велосипеда;
+        <hr>
+        2️⃣ В подарок от магазина оригинальной🇮🇹 велоформы и велоодежды - командная подиумная кепка и скидка 5% на всю продукцию;
+        <hr>
+        3️⃣ Скидка 10% на профессиональный бодифит от студии VeloSportLab🔝
+        <hr>
+        4️⃣ Скидка 10% на весь ассортимент в магазине SportResort💣
+        <hr>
+    </p>
+    <h3>⚙️ Технические детали:</h3>
+    <ol>
+        <li>рама: UD carbon monocoque - карбон/монокок</li>
+        <li>вилка: Monocoque carbon UD - карбон</li>
+        <li>вынос: Deda Zero 1 - алюм</li>
+        <li>руль: Aero HM - карбон</li>
+        <li>седло: San Marco Aspid</li>
+        <li>подседел: T1 Tourmalet carbon Aero - карбон</li>
+        <li>манетки: Shimano Ultegra 6800, 2x11ск</li>
+        <li>спереди: Shimano Ultegra 6800, 2ск</li>
+        <li>сзади: Shimano Ultegra 6800, 11ск</li>
+        <li>тормоза: Shimano Ultegra 6800 - клещи/аэро</li>
+        <li>система: Shimano RS-500, 50/34T</li>
+        <li>кассета: Shimano 105 5800, 11-28Т, 11ск</li>
+        <li>колёса: Mavic Cosmic Elite</li>
+        <li>покрышки: Maxxis RS-Fuse, 700x23c</li>
+    </ol>
+    <hr>
     <footer>
-        <p>все права извращены &copy;&nbsp;2017</p>
+        <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
+
 </body>
 
 </html>
