--- a/GikBrains/catalog/tovar2.html
+++ b/GikBrains/catalog/tovar2.html
@@ -19,51 +19,51 @@
     <a href="/GikBrains/img/tovar2.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar2.jpg" border="0" alt="Нажми"></a>
     <h3>Подробное описание товара</h3>
     <p>
-        ❤️ Ищет хозяина. Ожидает в Москве⚠️
+        ❤️ Ищет хозяина. Ожидает в&nbsp;Москве⚠️
         <hr>
-        🔎 Модель: Guerciotti Eclipse TT (2016г.)🇮🇹;
+        🔎 Модель: Guerciotti Eclipse&nbsp;TT (2016г.)🇮🇹;
         <hr>
-        👫 На рост 186-192± см;
+        👫 На&nbsp;рост 186-192&plusmn;&nbsp;см;
         <hr>
-        📏 Размер рамы L/XL - ЕТТ 56,5 см;
+        📏 Размер рамы L/XL&nbsp;&mdash; ЕТТ 56,5&nbsp;см;
         <hr>
         🔧 Состояние:
         <hr>
-        — рама: ⭐⭐⭐⭐
+        &mdash;&nbsp;рама: ⭐⭐⭐⭐
         <hr>
-        — навеска: ⭐⭐⭐⭐
+        &mdash;&nbsp;навеска: ⭐⭐⭐⭐
         <hr>
-        — колёса: ⭐⭐⭐⭐⭐
+        &mdash;&nbsp;колёса: ⭐⭐⭐⭐⭐
         <hr>
-        ⚖️ Вес 8,6 кг.
+        ⚖️ Вес&nbsp;8,6&nbsp;кг.
         <hr>
-        ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife.
+        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife.
         <hr>
-        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в веломастерской Velody на обслуживание купленного велосипеда;
+        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в&nbsp;веломастерской Velody на&nbsp;обслуживание купленного велосипеда;
         <hr>
-        2️⃣ В подарок от магазина оригинальной🇮🇹 велоформы и велоодежды скидка 5% на всю продукцию;
+        2️⃣ В&nbsp;подарок от&nbsp;магазина оригинальной🇮🇹 велоформы и&nbsp;велоодежды скидка&nbsp;5% на&nbsp;всю продукцию;
         <hr>
-        3️⃣ Скидка 10% на профессиональный бодифит от студии VeloSportLab🔝
+        3️⃣ Скидка&nbsp;10% на&nbsp;профессиональный бодифит от&nbsp;студии VeloSportLab🔝
         <hr>
-        4️⃣ Скидка 10% на весь ассортимент в магазине SportResort💣
+        4️⃣ Скидка&nbsp;10% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣
         <hr>
     </p>
     <h3>⚙️ Технические детали:</h3>
     <ol>
-        <li> рама: Guerciotti HM Monocoque - карбон/монокок</li>
-        <li>вилка: Guerciotti HM aero - карбон</li>
-        <li>вынос: Eclipse TT - алюм</li>
-        <li>руль: Dеdа Кrоnоs - карбон</li>
-        <li>лежаки: Deda Parabolica - алюм</li>
-        <li>седло: Sеllе Itаliа SLR ТТ Теаm Еditiоn</li>
-        <li>подседел: TEC for Eclipse TT - карбон</li>
-        <li>манетки: Shimаnо Durа-Асе 9000, 2x11ск</li>
+        <li> рама: Guerciotti HM&nbsp;Monocoque&nbsp;&mdash; карбон/монокок</li>
+        <li>вилка: Guerciotti HM&nbsp;aero&nbsp;&mdash; карбон</li>
+        <li>вынос: Eclipse TT&nbsp;&mdash; алюм</li>
+        <li>руль: Dеdа Кrоnоs&nbsp;&mdash; карбон</li>
+        <li>лежаки: Deda Parabolica&nbsp;&mdash; алюм</li>
+        <li>седло: Sеllе Itаliа SLR ТТ&nbsp;Теаm Еditiоn</li>
+        <li>подседел: TEC for Eclipse TT&nbsp;&mdash; карбон</li>
+        <li>манетки: Shimаnо Durа-Асе 9000, 2&times;11ск</li>
         <li>переключатели: Shimаnо Durа-Асе 9000</li>
         <li>тормоза: TRP Aero</li>
         <li>система: Shimano 105, 50/34T</li>
         <li>кассета: Shimano Ultegra, 11-28, 11ск</li>
         <li>колёса: Mavic Cosmic Al</li>
-        <li>покрышки: Continental Grand Prix 4 Season, 700x25c</li>
+        <li>покрышки: Continental Grand Prix 4&nbsp;Season, 700&times;25c</li>
     </ol>
     <hr>
     <footer>
