--- a/GikBrains/catalog/tovar1.html
+++ b/GikBrains/catalog/tovar1.html
@@ -20,47 +20,47 @@
     <h3>Подробное описание товара</h3>
     <p>
         ❤️ Ищет хозяина.
-        🔎 Модель: Giant TCR Advanced Pro 1 Disc (2019г.)🇹🇼;
+        🔎 Модель: Giant TCR Advanced Pro&nbsp;1 Disc (2019г.)🇹🇼;
         <hr>
-        👫 На рост 185-190см± см;
+        👫 На&nbsp;рост 185-190см&plusmn; см;
         <hr>
-        📏 Размер рамы L: ЕТТ 58 см;
+        📏 Размер рамы L: ЕТТ 58&nbsp;см;
         <hr>
         🔧 Состояние:
         <hr>
-        — рама: ⭐⭐⭐⭐⭐
+        &mdash;&nbsp;рама: ⭐⭐⭐⭐⭐
         <hr>
-        — навеска/колёса: ⭐⭐⭐⭐⭐
+        &mdash;&nbsp;навеска/колёса: ⭐⭐⭐⭐⭐
         <hr>
-        ⚖️ Вес: 8 кг🔥
+        ⚖️ Вес: 8&nbsp;кг🔥
         <hr>
-        ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife.
+        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife.
         <hr>
-        ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife.
+        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife.
         <hr>
-        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в веломастерской Velody на обслуживание купленного велосипеда;
+        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в&nbsp;веломастерской Velody на&nbsp;обслуживание купленного велосипеда;
         <hr>
-        2️⃣ В подарок от магазина оригинальной🇮🇹 велоформы и велоодежды скидка 5% на всю продукцию;
+        2️⃣ В&nbsp;подарок от&nbsp;магазина оригинальной🇮🇹 велоформы и&nbsp;велоодежды скидка&nbsp;5% на&nbsp;всю продукцию;
         <hr>
-        3️⃣ Скидка 5% на весь ассортимент в магазине SportResort💣
+        3️⃣ Скидка&nbsp;5% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣
         <hr>
     </p>
     <!-- вот такие дела дружочки -->
     <h3>⚙️ Технические детали:</h3>
     <ol>
-        <li>рама: Advanced Pro-Grade Composite - карбон/монокок</li>
-        <li>вилка: Advanced-Grade Composite - карбон</li>
-        <li>вынос: Giant Contact SL - алюм</li>
-        <li>руль: Giant Contact SL - алюм</li>
+        <li>рама: Advanced Pro-Grade Composite&nbsp;&mdash; карбон/монокок</li>
+        <li>вилка: Advanced-Grade Composite&nbsp;&mdash; карбон</li>
+        <li>вынос: Giant Contact SL&nbsp;&mdash; алюм</li>
+        <li>руль: Giant Contact SL&nbsp;&mdash; алюм</li>
         <li>седло: Giant Contact SL</li>
-        <li>подседел: Giant Variant - карбон</li>
-        <li>манетки: Shimano Ultegra R8000, 2x11ск</li>
+        <li>подседел: Giant Variant&nbsp;&mdash; карбон</li>
+        <li>манетки: Shimano Ultegra R8000, 2&times;11ск</li>
         <li>переключатели: Shimano Ultegra R8000</li>
         <li>тормоза: Shimano Ultegra R8000, 160/160мм, гидравлика</li>
         <li>система: Shimano Ultegra 8000, 52/36T</li>
         <li>кассета: Shimano Ultegra, 11-30T</li>
-        <li> колёса: Giant SLR 1, 42мм - карбон</li>
-        <li>покрышки: Giant Gavia AC1, 700x25c</li>
+        <li> колёса: Giant SLR 1, 42мм&nbsp;&mdash; карбон</li>
+        <li>покрышки: Giant Gavia AC1, 700&times;25c</li>
     </ol>
     <hr>
     <footer>
