--- a/GikBrains/catalog/tovar3.html
+++ b/GikBrains/catalog/tovar3.html
@@ -19,51 +19,51 @@
     <a href="/GikBrains/img/tovar2.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar2.jpg" border="0" alt="Нажми"></a>
     <h3>Подробное описание товара</h3>
     <p>
-        ❤️ Ищет хозяина. Ожидает в Москве ⚠️
+        ❤️ Ищет хозяина. Ожидает в&nbsp;Москве ⚠️
         <hr>
-        🔎 Модель: Bottecchia Tourmalet T1 (2016г.)🇮🇹;
+        🔎 Модель: Bottecchia Tourmalet&nbsp;T1 (2016г.)🇮🇹;
         <hr>
-        👫 На рост 185-192± см;
+        👫 На&nbsp;рост 185-192&plusmn;&nbsp;см;
         <hr>
-        📏 Размер рамы L/XL(54) - ЕТТ 57 см;
+        📏 Размер рамы L/XL(54)&nbsp;&mdash; ЕТТ 57&nbsp;см;
         <hr>
         🔧 Состояние:
         <hr>
-        — рама: ⭐⭐⭐⭐
+        &mdash;&nbsp;рама: ⭐⭐⭐⭐
         <hr>
-        — навеска: ⭐⭐⭐⭐
+        &mdash;&nbsp;навеска: ⭐⭐⭐⭐
         <hr>
-        — колёса: ⭐⭐⭐⭐⭐
+        &mdash;&nbsp;колёса: ⭐⭐⭐⭐⭐
         <hr>
-        ⚖️ Вес: 8 кг
+        ⚖️ Вес: 8&nbsp;кг
         <hr>
-        ℹ️ Все велосипеды смотрите в профиле или по поиску: liferidelife
+        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife
         <hr>
-        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в веломастерской Velody на обслуживание купленного велосипеда;
+        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в&nbsp;веломастерской Velody на&nbsp;обслуживание купленного велосипеда;
         <hr>
-        2️⃣ В подарок от магазина оригинальной🇮🇹 велоформы и велоодежды - командная подиумная кепка и скидка 5% на всю продукцию;
+        2️⃣ В&nbsp;подарок от&nbsp;магазина оригинальной🇮🇹 велоформы и&nbsp;велоодежды&nbsp;&mdash; командная подиумная кепка и&nbsp;скидка&nbsp;5% на&nbsp;всю продукцию;
         <hr>
-        3️⃣ Скидка 10% на профессиональный бодифит от студии VeloSportLab🔝
+        3️⃣ Скидка&nbsp;10% на&nbsp;профессиональный бодифит от&nbsp;студии VeloSportLab🔝
         <hr>
-        4️⃣ Скидка 10% на весь ассортимент в магазине SportResort💣
+        4️⃣ Скидка&nbsp;10% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣
         <hr>
     </p>
     <h3>⚙️ Технические детали:</h3>
     <ol>
-        <li>рама: UD carbon monocoque - карбон/монокок</li>
-        <li>вилка: Monocoque carbon UD - карбон</li>
-        <li>вынос: Deda Zero 1 - алюм</li>
-        <li>руль: Aero HM - карбон</li>
+        <li>рама: UD&nbsp;carbon monocoque&nbsp;&mdash; карбон/монокок</li>
+        <li>вилка: Monocoque carbon UD&nbsp;&mdash; карбон</li>
+        <li>вынос: Deda Zero 1&nbsp;&mdash; алюм</li>
+        <li>руль: Aero HM&nbsp;&mdash; карбон</li>
         <li>седло: San Marco Aspid</li>
-        <li>подседел: T1 Tourmalet carbon Aero - карбон</li>
-        <li>манетки: Shimano Ultegra 6800, 2x11ск</li>
+        <li>подседел: T1&nbsp;Tourmalet carbon Aero&nbsp;&mdash; карбон</li>
+        <li>манетки: Shimano Ultegra 6800, 2&times;11ск</li>
         <li>спереди: Shimano Ultegra 6800, 2ск</li>
         <li>сзади: Shimano Ultegra 6800, 11ск</li>
-        <li>тормоза: Shimano Ultegra 6800 - клещи/аэро</li>
+        <li>тормоза: Shimano Ultegra 6800&nbsp;&mdash; клещи/аэро</li>
         <li>система: Shimano RS-500, 50/34T</li>
         <li>кассета: Shimano 105 5800, 11-28Т, 11ск</li>
         <li>колёса: Mavic Cosmic Elite</li>
-        <li>покрышки: Maxxis RS-Fuse, 700x23c</li>
+        <li>покрышки: Maxxis RS-Fuse, 700&times;23c</li>
     </ol>
     <hr>
     <footer>
