--- a/GikBrains/catalog/catalog.html
+++ b/GikBrains/catalog/catalog.html
@@ -18,12 +18,12 @@
     <main>
         <h1>Каталог</h1>
         <ul>
-            <img src="/img/zalupa.jpg" alt="Тут должна быть наша залупа" width="50" height="50"><br>
-            <li><a href="/catalog/tovar1.html">Товар каталога 1(залупа)</a></li><br>
-            <img src="/img/huy.jpg" alt="Тут должен быть наш хуй" width="50" height="50"><br>
-            <li><a href="/catalog/tovar2.html">Товар каталога 2 (хуй)</a></li><br>
-            <img src="/img/iyayza.jpg" alt="Тут должен быть наши яйца" width="50" height="50"><br>
-            <li><a href="/catalog/tovar3.html">Товар каталога 3 (яйца)</a></li><br>
+            <img src="/GikBrains/img/tovar1.jpg" alt="товар 1" width="50" height="50"><br>
+            <li><a href="/GikBrains/catalog/tovar1.html">Товар каталога 1(Giant TCR Advanced Pro 1 Disc (2019г.)</a></li><br>
+            <img src="/GikBrains/img/tovar2.jpg" alt="товар 2" width="50" height="50"><br>
+            <li><a href="/GikBrains/catalog/tovar2.html">Товар каталога 2 (Guerciotti Eclipse TT (2016г.)</a></li><br>
+            <img src="/GikBrains/img/tovar3.jpg" alt="товар 3" width="50" height="50"><br>
+            <li><a href="/GikBrains/catalog/tovar3.html">Товар каталога 3 (Bottecchia Tourmalet T1 (2016г.)</a></li><br>
         </ul>
 
     </main>
@@ -31,4 +31,6 @@
         © Все права извращены
     </footer>
 
-</body></html>
+</body>
+
+</html>
