--- a/GikBrains/index.html
+++ b/GikBrains/index.html
@@ -8,21 +8,21 @@
 
 <body>
     <header>
-    <header>
-        <ul class="menu">
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="../catalog/catalog.html">Каталог</a></li>
-            <li><a href="../contacts.html">Контакты</a></li>
-        </ul>
-    </header>
+        <header>
+            <ul class="menu">
+                <li><a href="../GikBrains/index.html">Главная</a></li>
+                <li><a href="../GikBrains/catalog/catalog.html">Каталог</a></li>
+                <li><a href="../GikBrains/contacts.html">Контакты</a></li>
+            </ul>
+        </header>
         <hr>
     </header>
     <main>
-        <h1>Поква Стор</h1>
-        <p>Добро пожаловать в "Поква Стор" тут много интересного для любого отбитого, зашкварного чувака. Хаджиме!</p>
+        <h1>Велики от Кирюхи</h1>
+        <p>Добро пожаловать в "Велики от Кирюхи", затарь себе двухколесного другана или снарягу к нему</p>
         <hr>
     </main>
     <footer>
-        <p>все права извращены &copy;&nbsp;2017</p>
+        <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 </body></html>
