подправил все, что осталось, самое время преступать к CSS

--- a/GikBrains/catalog/catalog.html
+++ b/GikBrains/catalog/catalog.html
@@ -9,21 +9,24 @@
 <body>
     <header>
         <ul class="menu">
-            <li><a href="../GikBrains/index.html">Главная</a></li>
+            <li><a href="/GikBrains/index.html">Главная</a></li>
             <li><a href="/GikBrains/catalog/catalog.html">Каталог</a></li>
-            <li><a href="/Co">Контакты</a></li>
+            <li><a href="/GikBrains/contacts.html">Контакты</a></li>
         </ul>
     </header>
     <hr>
     <main>
         <h1>Каталог</h1>
         <ul>
-            <img src="/GikBrains/img/tovar1.jpg" alt="товар 1" width="50" height="50"><br>
+            <img src="/GikBrains/img/tovar1.jpg" alt="товар 1" width="100" height="70"><br>
             <li><a href="/GikBrains/catalog/tovar1.html">Товар каталога 1(Giant TCR Advanced Pro 1 Disc (2019г.)</a></li><br>
-            <img src="/GikBrains/img/tovar2.jpg" alt="товар 2" width="50" height="50"><br>
+            <hr>
+            <img src="/GikBrains/img/tovar2.jpg" alt="товар 2" width="100" height="70"><br>
             <li><a href="/GikBrains/catalog/tovar2.html">Товар каталога 2 (Guerciotti Eclipse TT (2016г.)</a></li><br>
-            <img src="/GikBrains/img/tovar3.jpg" alt="товар 3" width="50" height="50"><br>
+            <hr>
+            <img src="/GikBrains/img/tovar3.jpg" alt="товар 3" width="100" height="70"><br>
             <li><a href="/GikBrains/catalog/tovar3.html">Товар каталога 3 (Bottecchia Tourmalet T1 (2016г.)</a></li><br>
+            <hr>
         </ul>
 
     </main>
