--- a/GikBrains/contacts.html
+++ b/GikBrains/contacts.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <ul class="menu">
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="../catalog/catalog.html">Каталог</a></li>
-            <li><a href="../contacts.html">Контакты</a></li>
+            <li><a href="/GikBrains/index.html">Главная</a></li>
+            <li><a href="/GikBrains/catalog/catalog.html">Каталог</a></li>
+            <li><a href="/GikBrains/contacts.html">Контакты</a></li>
             <hr>
             <H1>Напишите Нам</H1>
         </ul>
@@ -45,4 +45,6 @@
     <footer>
         <p>все права извращены &copy;&nbsp;2017</p>
     </footer>
-</body></html>
+</body>
+
+</html>
