--- a/GikBrains/catalog/catalog.html
+++ b/GikBrains/catalog/catalog.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Catalog</title>
+    <link rel="stylesheet" href="/GikBrains/style.css">
 </head>
 
 <body>
@@ -34,6 +35,4 @@
         © Все права извращены
     </footer>
 
-</body>
-
-</html>
+</body></html>
