--- a/GikBrains/catalog/pattern.html
+++ b/GikBrains/catalog/pattern.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>shop name</title>
+    <link rel="stylesheet" href="/GikBrains/style.css">
 
 </head>
 
@@ -23,6 +24,4 @@
     <p></p>
     <hr>
     <p>Все права извращены</p>
-</body>
-
-</html>
+</body></html>
