--- a/GikBrains/contacts.html
+++ b/GikBrains/contacts.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Контакты</title>
+    <link rel="stylesheet" href="/GikBrains/style.css">
 </head>
 
 <body>
@@ -45,6 +46,4 @@
     <footer>
         <p>все права извращены &copy;&nbsp;2017</p>
     </footer>
-</body>
-
-</html>
+</body></html>
