--- a/GikBrains/catalog/tovar1.html
+++ b/GikBrains/catalog/tovar1.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Залупа</title>
+    <title>Giant</title>
+    <link rel="stylesheet" href="/GikBrains/style.css">
 </head>
 
 <body>
@@ -67,6 +68,4 @@
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 
-</body>
-
-</html>
+</body></html>
