--- a/GikBrains/catalog/tovar2.html
+++ b/GikBrains/catalog/tovar2.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Guerciotti Eclipse TT</title>
+    <link rel="stylesheet" href="/GikBrains/style.css">
 </head>
 
 <body>
@@ -70,6 +71,4 @@
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 
-</body>
-
-</html>
+</body></html>
