--- a/GikBrains/index.html
+++ b/GikBrains/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
+    <link rel="stylesheet" href="/GikBrains/style.css">
 </head>
 
 <body>
@@ -25,4 +26,6 @@
     <footer>
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
-</body></html>
+</body>
+
+</html>
