Добавил краткое описание товара.

--- a/GikBrains/catalog/tovar1.html
+++ b/GikBrains/catalog/tovar1.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-    <h1>Тайваньский гоночный эндуранс Giant на 185-190см</h1>
     <header>
         <ul class="menu">
             <li><a href="../index.html">Главная</a></li>
@@ -16,6 +15,9 @@
             <li><a href="../contacts.html">Контакты</a></li>
         </ul>
     </header>
+    <h1>Тайваньский гоночный эндуранс Giant на 185-190см</h1>
+    <h1>Краткое описание товара</h1>
+    <p>Велосипед шоссейный, быстрый, сочный, спелый. Бери да катайся брат браток братишка</p>
     <hr>
     <a href="/GikBrains/img/tovar1.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar1.jpg" border="0" alt="Нажми"></a>
     <h3>Подробное описание товара</h3>
@@ -68,4 +70,6 @@
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 
-</body></html>
+</body>
+
+</html>
