--- a/GikBrains/catalog/tovar2.html
+++ b/GikBrains/catalog/tovar2.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-    <h1>Guerciotti Eclipse TT (2016г.)</h1>
     <header>
         <ul class="menu">
             <li><a href="../index.html">Главная</a></li>
@@ -16,6 +15,8 @@
             <li><a href="../contacts.html">Контакты</a></li>
         </ul>
     </header>
+    <h1>Guerciotti Eclipse TT (2016г.)</h1>
+    <p>Велосипед шоссейный, быстрый, сочный, спелый. Бери да катайся брат браток братишка</p>
     <hr>
     <a href="/GikBrains/img/tovar2.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar2.jpg" border="0" alt="Нажми"></a>
     <h3>Подробное описание товара</h3>
@@ -71,4 +72,6 @@
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 
-</body></html>
+</body>
+
+</html>
