Поменял заголовки- добавил идентификатор

--- a/GikBrains/catalog/tovar1.html
+++ b/GikBrains/catalog/tovar1.html
@@ -15,12 +15,12 @@
             <li><a href="../contacts.html">Контакты</a></li>
         </ul>
     </header>
-    <h1>Тайваньский гоночный эндуранс Giant на 185-190см</h1>
-    <h1>Краткое описание товара</h1>
+    <h1 id="heading">Тайваньский гоночный эндуранс Giant на 185-190см</h1>
+    <h2 id="kratko">Краткое описание товара</h2>
     <p>Велосипед шоссейный, быстрый, сочный, спелый. Бери да катайся брат браток братишка</p>
     <hr>
     <a href="/GikBrains/img/tovar1.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar1.jpg" border="0" alt="Нажми"></a>
-    <h3>Подробное описание товара</h3>
+    <h3 id="podrobno">Подробное описание товара</h3>
     <p>
         ❤️ Ищет хозяина.
         🔎 Модель: Giant TCR Advanced Pro&nbsp;1 Disc (2019г.)🇹🇼;
@@ -49,7 +49,7 @@
         <hr>
     </p>
     <!-- вот такие дела дружочки -->
-    <h3>⚙️ Технические детали:</h3>
+    <h3 id="haracter">Характеристики</h3>
     <ol>
         <li>рама: Advanced Pro-Grade Composite&nbsp;&mdash; карбон/монокок</li>
         <li>вилка: Advanced-Grade Composite&nbsp;&mdash; карбон</li>
@@ -70,6 +70,4 @@
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 
-</body>
-
-</html>
+</body></html>
