--- a/GikBrains/catalog/tovar2.html
+++ b/GikBrains/catalog/tovar2.html
@@ -15,11 +15,12 @@
             <li><a href="../contacts.html">Контакты</a></li>
         </ul>
     </header>
-    <h1>Guerciotti Eclipse TT (2016г.)</h1>
+    <h1 id="heading">Guerciotti Eclipse TT (2016г.)</h1>
+    <h2 id="kratko">Краткое описание товара</h2>
     <p>Велосипед шоссейный, быстрый, сочный, спелый. Бери да катайся брат браток братишка</p>
     <hr>
     <a href="/GikBrains/img/tovar2.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar2.jpg" border="0" alt="Нажми"></a>
-    <h3>Подробное описание товара</h3>
+    <h3 id="podrobno">Подробное описание товара</h3>
     <p>
         ❤️ Ищет хозяина. Ожидает в&nbsp;Москве⚠️
         <hr>
@@ -50,7 +51,7 @@
         4️⃣ Скидка&nbsp;10% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣
         <hr>
     </p>
-    <h3>⚙️ Технические детали:</h3>
+    <h3 id="haracter">Характеристики</h3>
     <ol>
         <li> рама: Guerciotti HM&nbsp;Monocoque&nbsp;&mdash; карбон/монокок</li>
         <li>вилка: Guerciotti HM&nbsp;aero&nbsp;&mdash; карбон</li>
@@ -72,6 +73,4 @@
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 
-</body>
-
-</html>
+</body></html>
