Изменил технические характеристики

--- a/GikBrains/catalog/tovar3.html
+++ b/GikBrains/catalog/tovar3.html
@@ -17,39 +17,25 @@
     </header>
     <h1 id="heading">Bottecchia Tourmalet T1 (2016г.)</h1>
     <h2 id="kratko">Краткое описание товара</h2>
-    <p>Велосипед шоссейный, быстрый, сочный, спелый. Бери да катайся брат браток братишка</p>
+    <p id="krop">Велосипед шоссейный, быстрый, сочный, спелый. Бери да катайся брат браток братишка</p>
     <hr>
     <a href="/GikBrains/img/tovar2.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar3.jpg" border="0" alt="Нажми"></a>
     <h3 id="podrobno">Подробное описание товара</h3>
-    <p>
-        ❤️ Ищет хозяина. Ожидает в&nbsp;Москве ⚠️
-        <hr>
-        🔎 Модель: Bottecchia Tourmalet&nbsp;T1 (2016г.)🇮🇹;
-        <hr>
-        👫 На&nbsp;рост 185-192&plusmn;&nbsp;см;
-        <hr>
-        📏 Размер рамы L/XL(54)&nbsp;&mdash; ЕТТ 57&nbsp;см;
-        <hr>
-        🔧 Состояние:
-        <hr>
-        &mdash;&nbsp;рама: ⭐⭐⭐⭐
-        <hr>
-        &mdash;&nbsp;навеска: ⭐⭐⭐⭐
-        <hr>
-        &mdash;&nbsp;колёса: ⭐⭐⭐⭐⭐
-        <hr>
-        ⚖️ Вес: 8&nbsp;кг
-        <hr>
-        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife
-        <hr>
-        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в&nbsp;веломастерской Velody на&nbsp;обслуживание купленного велосипеда;
-        <hr>
-        2️⃣ В&nbsp;подарок от&nbsp;магазина оригинальной🇮🇹 велоформы и&nbsp;велоодежды&nbsp;&mdash; командная подиумная кепка и&nbsp;скидка&nbsp;5% на&nbsp;всю продукцию;
-        <hr>
-        3️⃣ Скидка&nbsp;10% на&nbsp;профессиональный бодифит от&nbsp;студии VeloSportLab🔝
-        <hr>
-        4️⃣ Скидка&nbsp;10% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣
-        <hr>
+    <p id="podrob">
+        ❤️ Ищет хозяина. Ожидает в&nbsp;Москве ⚠️<br>
+        🔎 Модель: Bottecchia Tourmalet&nbsp;T1 (2016г.)🇮🇹<br>
+        👫 На&nbsp;рост 185-192&plusmn;&nbsp;см<br>
+        📏 Размер рамы L/XL(54)&nbsp;&mdash; ЕТТ 57&nbsp;см<br>
+        🔧 Состояние:<br>
+        &mdash;&nbsp;рама: ⭐⭐⭐⭐<br>
+        &mdash;&nbsp;навеска: ⭐⭐⭐⭐<br>
+        &mdash;&nbsp;колёса: ⭐⭐⭐⭐⭐<br>
+        ⚖️ Вес: 8&nbsp;кг<br>
+        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife<br>
+        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в&nbsp;веломастерской Velody на&nbsp;обслуживание купленного велосипеда<br>
+        2️⃣ В&nbsp;подарок от&nbsp;магазина оригинальной🇮🇹 велоформы и&nbsp;велоодежды&nbsp;&mdash; командная подиумная кепка и&nbsp;скидка&nbsp;5% на&nbsp;всю продукцию<br>
+        3️⃣ Скидка&nbsp;10% на&nbsp;профессиональный бодифит от&nbsp;студии VeloSportLab🔝<br>
+        4️⃣ Скидка&nbsp;10% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣<br>
     </p>
     <h3 id="haracter">Характеристики</h3>
     <ol>
@@ -73,4 +59,6 @@
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 
-</body></html>
+</body>
+
+</html>
