--- a/GikBrains/catalog/tovar1.html
+++ b/GikBrains/catalog/tovar1.html
@@ -17,36 +17,24 @@
     </header>
     <h1 id="heading">Тайваньский гоночный эндуранс Giant на 185-190см</h1>
     <h2 id="kratko">Краткое описание товара</h2>
-    <p>Велосипед шоссейный, быстрый, сочный, спелый. Бери да катайся брат браток братишка</p>
+    <p id="krop">Велосипед шоссейный, быстрый, сочный, спелый. Бери да катайся брат браток братишка</p>
     <hr>
     <a href="/GikBrains/img/tovar1.jpg" title="Нажми!!!" target="_blank"><img src="/GikBrains/img/tovar1.jpg" border="0" alt="Нажми"></a>
     <h3 id="podrobno">Подробное описание товара</h3>
-    <p>
-        ❤️ Ищет хозяина.
-        🔎 Модель: Giant TCR Advanced Pro&nbsp;1 Disc (2019г.)🇹🇼;
-        <hr>
-        👫 На&nbsp;рост 185-190см&plusmn; см;
-        <hr>
-        📏 Размер рамы L: ЕТТ 58&nbsp;см;
-        <hr>
-        🔧 Состояние:
-        <hr>
-        &mdash;&nbsp;рама: ⭐⭐⭐⭐⭐
-        <hr>
-        &mdash;&nbsp;навеска/колёса: ⭐⭐⭐⭐⭐
-        <hr>
-        ⚖️ Вес: 8&nbsp;кг🔥
-        <hr>
-        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife.
-        <hr>
-        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife.
-        <hr>
-        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в&nbsp;веломастерской Velody на&nbsp;обслуживание купленного велосипеда;
-        <hr>
-        2️⃣ В&nbsp;подарок от&nbsp;магазина оригинальной🇮🇹 велоформы и&nbsp;велоодежды скидка&nbsp;5% на&nbsp;всю продукцию;
-        <hr>
-        3️⃣ Скидка&nbsp;5% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣
-        <hr>
+    <p id="podrob">
+        ❤️ Ищет хозяина<br>
+        🔎 Модель: Giant TCR Advanced Pro&nbsp;1 Disc (2019г.)🇹🇼<br>
+        👫 На&nbsp;рост 185-190см&plusmn; см<br>
+        📏 Размер рамы L: ЕТТ 58&nbsp;см<br>
+        🔧 Состояние:<br>
+        &mdash;&nbsp;рама: ⭐⭐⭐⭐⭐<br>
+        &mdash;&nbsp;навеска/колёса: ⭐⭐⭐⭐⭐<br>
+        ⚖️ Вес: 8&nbsp;кг🔥<br>
+        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife<br>
+        ℹ️ Все велосипеды смотрите в&nbsp;профиле или по&nbsp;поиску: liferidelife<br>
+        1️⃣ ПОЖИЗНЕННАЯ скидка 20%💥 в&nbsp;веломастерской Velody на&nbsp;обслуживание купленного велосипеда<br>
+        2️⃣ В&nbsp;подарок от&nbsp;магазина оригинальной🇮🇹 велоформы и&nbsp;велоодежды скидка&nbsp;5% на&nbsp;всю продукцию<br>
+        3️⃣ Скидка&nbsp;5% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣<br>
     </p>
     <!-- вот такие дела дружочки -->
     <h3 id="haracter">Характеристики</h3>
@@ -70,4 +58,6 @@
         <p>все права защищены &copy;&nbsp;2020</p>
     </footer>
 
-</body></html>
+</body>
+
+</html>
