тут вроде нет изменений

--- a/GikBrains/catalog/tovar2.html
+++ b/GikBrains/catalog/tovar2.html
@@ -36,7 +36,7 @@
         3️⃣ Скидка&nbsp;10% на&nbsp;профессиональный бодифит от&nbsp;студии VeloSportLab🔝<br>
         4️⃣ Скидка&nbsp;10% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣<br>
     </p>
-    <h3 id="haracter">Характеристики</h3>
+    <h3 id="haracter">Характеристики:</h3>
     <ol>
         <li> рама: Guerciotti HM&nbsp;Monocoque&nbsp;&mdash; карбон/монокок</li>
         <li>вилка: Guerciotti HM&nbsp;aero&nbsp;&mdash; карбон</li>
