--- a/GikBrains/catalog/tovar3.html
+++ b/GikBrains/catalog/tovar3.html
@@ -37,7 +37,7 @@
         3️⃣ Скидка&nbsp;10% на&nbsp;профессиональный бодифит от&nbsp;студии VeloSportLab🔝<br>
         4️⃣ Скидка&nbsp;10% на&nbsp;весь ассортимент в&nbsp;магазине SportResort💣<br>
     </p>
-    <h3 id="haracter">Характеристики</h3>
+    <h3 id="haracter">Характеристики:</h3>
     <ol>
         <li>рама: UD&nbsp;carbon monocoque&nbsp;&mdash; карбон/монокок</li>
         <li>вилка: Monocoque carbon UD&nbsp;&mdash; карбон</li>
